--- a/bootstrap-form.html
+++ b/bootstrap-form.html
@@ -1,45 +1,35 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Contact form using Bootstrap 3.3.4</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta charset="utf-8">
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-</head>
-<body style="background-color: #7e7e7e">
-<div class="row">
-<div class="col-sm-6 col-sm-offset-3">
-    <div class="well" style="margin-top: 10%;">
-    <h3>Send me a message</h3>
-    <form role="form" id="contactForm" data-toggle="validator" class="shake">
-        <div class="row">
-            <div class="form-group col-sm-6">
-                <label for="name" class="h4">Name</label>
-                <input type="text" class="form-control" id="name" placeholder="Enter name" required data-error="NEW ERROR MESSAGE">
-                <div class="help-block with-errors"></div>
-            </div>
-            <div class="form-group col-sm-6">
-                <label for="email" class="h4">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter email" required>
-                <div class="help-block with-errors"></div>
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="message" class="h4 ">Message</label>
-            <textarea id="message" class="form-control" rows="5" placeholder="Enter your message" required></textarea>
-            <div class="help-block with-errors"></div>
-        </div>
-        <button type="submit" id="form-submit" class="btn btn-success btn-lg pull-right ">Submit</button>
-        <div id="msgSubmit" class="h3 text-center hidden"></div>
-        <div class="clearfix"></div>
-    </form>
-    </div>
-</div>
-</div>
-</body>
-<script  type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
-<script type="text/javascript" src="js/validator.min.js"></script>
-<script type="text/javascript" src="js/form-scripts.js"></script>
-</html>
+	<div class="feedback-inline-wrap">
+            <div class="feedback-form-title">Обратная связь</div>
+            <form role="form" id="contactForm" data-toggle="validator" class="shake">
+                <div class="form-body">
+                    <div class="form-group ">
+                        <label for="name">ФИО</label>
+                        <input type="text" id="name" data-error="заполните поле">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">E-mail</label>
+                        <input type="email" id="email" required data-error="заполните поле">
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Ваше сообщение</label>
+                        <textarea id="message" rows="5" required data-error="заполните поле"></textarea>
+                        <div class="help-block with-errors"></div>
+                    </div>
+                    <button type="submit" id="form-submit">Отправить</button>
+                    <div class="privacy-policy">Нажимая “Отправить”, Вы соглашаетесь с
+                        <a href="/politika-konfidentsialnosti/" target="_blank">политикой<br>обработки персональных данных.</a>
+                    </div>
+                </div>
+                <div id="msgSubmit" class="h3 text-center hidden">
+                    <span class="js-success-query">
+						<div class="alert-success">
+						<span></span>
+						<div style="padding-left: 59px; text-align: left;">Ваше сообщение успешно отправлено!</div>
+						</div>
+						<div class="ok-text-after">Мы свяжемся с Вами в самое ближайшее время.</div>
+					</span>
+                </div>
+            </form>
+	</div>
